[tool.poetry]
name = "market-health-backend"
version = "0.1.0"
description = ""
authors = ["Paolo Leopardi <leopardipaolo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
alpaca-py = "^0.21.1"
fastapi = "^0.111.0"
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.1"
python-dotenv = "^1.0.1"
ruff = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
